# ESP-IDF-projects

./: .gitignore
TestingESP32Examples/BlinkRNT/: CMakeLists.txt
TestingESP32Examples/BlinkRNT/main/: main.c
TestingESP32Examples/ESP32_GPIO_OutputConfig/: CMakeLists.txt
TestingESP32Examples/ESP32_GPIO_OutputConfig/main/: main.c
TestingESP32Examples/FuncDemoForStdLibraries/: CMakeLists.txt
TestingESP32Examples/LED3SequenceFuncPWM/: CMakeLists.txt
TestingESP32Examples/LED3SequenceFuncPWM/main/: main.c
TestingESP32Examples/LEDcontrolBrightnessPWM/: CMakeLists.txt
TestingESP32Examples/LEDcontrolBrightnessPWM/main/: main.c
TestingESP32Examples/LEDcontrolFuncPWM/: CMakeLists.txt
TestingESP32Examples/LEDcontrolFuncPWM/main/: main.c
TestingESP32Examples/dac_audio/: sdkconfig
common_libs/CLRC663-Library/: CMakeLists.txt
common_libs/CLRC663-Library/src/: clrc663_idf.c  clrc663_idf.h
sandbox/TxNFC663_Esp32C3SMin/: CMakeLists.txt
sandbox/TxNFC663_Esp32C3SMin/main/: TxNfcEspNOW_0.2_main.c
sandbox/Working Backups/TxNFC663_Esp32C3SMin_v0.1/: CMakeLists.txt
sandbox/Working Backups/TxNFC663_Esp32C3SMin_v0.1/main/: CMakeLists.txt  TxNfcEspNOW_0.1_main.c
sandbox/Working Backups/TxNFC663_Esp32C3SMin_v0.2/main/: CMakeLists.txt  TxNfcEspNOW_0.2_main.c
